--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username "https://www.linkedin.com/in/percy-peng-647068272/"
+  linkedin         : percy-peng-647068272 # "https://www.linkedin.com/in/percy-peng-647068272/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
